# albion-journal

./: .gitignore  config_xtractor.yaml  history_builder.py  journal.md  journal_xtractor-config.yaml  journal_xtractor.py  pyproject.toml
lib/: __init__.py  guide.py  items.py  localization.py  mobs.py  xml.py
