[project]
name = "journal_xtractor.py"
version = "0.7.0-beta"
description = "AOGrind Journal Extractor - Extract achievements, rewards, and other details for the Guide on AO Grind"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "typer>=0.16.0",
]
